--- a/css/main.css
+++ b/css/main.css
@@ -832,6 +832,8 @@ a.link-title {
     right: 0;
     top: 0;
     bottom: 0;
+    width: auto !important;
+    height: auto !important;
 }
 
 #post-image-container > .post-image-tile {
