--- a/css/main.css
+++ b/css/main.css
@@ -818,6 +818,7 @@ a.link-title {
 #post-image-container {
     max-height: 500px;
     position: relative;
+    overflow: auto;
 }
 
 #post-image-container.max-height {
