--- a/css/main.css
+++ b/css/main.css
@@ -271,6 +271,7 @@ a:visited {
     padding: 10px;*/
 /*    border-right: 2px solid #f6f6f6;*/
     width: 580px;
+    padding-right: 8px;
 }
 
 #details-right-column {
