--- a/css/main.css
+++ b/css/main.css
@@ -843,6 +843,10 @@ a.link-title {
 }
 
 #post-image-container > .post-image-tile .close-button {
+    display: none;
+}
+
+#post-image-container > .post-image-tile.expanded .close-button {
     pointer-events: none;
     margin-top: 5px;
     margin-right: 5px;
