--- a/css/main.css
+++ b/css/main.css
@@ -262,9 +262,11 @@ a:visited {
     padding-top: 25px;
 }
 
-.floating-panel > .floating-panel-content.tall {
+.floating-panel > .floating-panel-content.fullsize {
     bottom: 0;
     top: 0;
+    right: 0;
+    left: 0;
 }
 
 #details-left-column {
@@ -273,7 +275,7 @@ a:visited {
 }
 
 #details-right-column {
-    width: 590px;
+    left: 328px;
     padding-right: 8px;
 }
 
