--- a/css/main.css
+++ b/css/main.css
@@ -661,7 +661,7 @@ a:visited {
     font-size: 1.15em;
 }
 
-.facebook-poststamp .post-permalink {
+.facebook-user-header .post-permalink {
     position: absolute;
     right: 0;
     top: 0;
