--- a/css/main.css
+++ b/css/main.css
@@ -211,7 +211,12 @@ a:visited {
 }
 
 #main-search {
-    
+    height: 1.5em;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    width: 140px;
 }
 
 #main-panel {
