--- a/css/main.css
+++ b/css/main.css
@@ -211,7 +211,7 @@ a:visited {
 }
 
 #main-search {
-    height: 1.4em;
+    height: 1.5em;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 6px;
@@ -271,13 +271,13 @@ a:visited {
 
 .floating-panel.fullsize {
     width: auto;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 25px;
+    margin-right: 25px;
 }
 
 .floating-panel.fullsize > .floating-panel-content {
-    bottom: 0;
-    top: 0;
+    bottom: 25px;
+    top: 25px;
 }
 
 #details-left-column {
@@ -1054,6 +1054,7 @@ div.right-toolbar-button {
     top: 55px;
     border-radius: 0;
     overflow: hidden;
+    background: transparent;
 }
 
 .toolbar {
