--- a/css/main.css
+++ b/css/main.css
@@ -905,6 +905,7 @@ a.link-title {
     position: absolute;
     top: 20px;
     bottom: 0;
+    margin-bottom: 0;
     padding: 10px;
     overflow-y: auto;
     overflow-x: hidden;
