--- a/css/main.css
+++ b/css/main.css
@@ -294,7 +294,7 @@ a:visited {
 .ajax-loading-div {
     background: white;
     background-image: url('/img/ajax.gif');
-    background-position: center top;
+    background-position: center 100px;
     background-repeat: no-repeat;
     position: absolute;
     left: 0;
