--- a/css/main.css
+++ b/css/main.css
@@ -864,13 +864,15 @@ a.link-title {
     position: absolute;
 }
 
-#post-image-container .post-image-tile.expanded {
+#post-image-container .post-image-tile.expanded, #post-image-container .post-image-tile.single {
     position: absolute;
     background-size: contain;
     left: 0;
     right: 0;
     top: 0;
     bottom: 0;
+    margin-right: 0;
+    margin-bottom: 0;
     width: auto !important;
     height: auto !important;
 }
@@ -891,11 +893,11 @@ a.link-title {
     display: none;
 }*/
 
-#post-image-container .post-image-tile.single {
+/*#post-image-container .post-image-tile.single {
     cursor: default;
     background-size: contain;
     margin-right: 0;
-}
+}*/
 
 /*#post-image-container .post-image-tile.expanded .close-button {
     margin-top: 5px;
@@ -903,10 +905,6 @@ a.link-title {
     display: block;
     background-image: url('/img/panel-close-red.png');
 }*/
-
-#post-image-container > .post-image-tile.expanded .close-button:hover {
-/*    background-image: url('/img/panel-close-light-hover.png');*/
-}
 
 #post-image-container .post-image-tile.right {
     margin-right: 0px;
