--- a/css/main.css
+++ b/css/main.css
@@ -324,6 +324,7 @@ a:visited {
     margin: 5px;
     padding: 4px !important;
     position: relative;
+    border-radius: 5px;
 }
 
 .selection-item-content {
@@ -524,67 +525,6 @@ a:visited {
     background-image: url('/icons/recycle32w.png');
 }
 
-/*
-.toolbar-button .button-icon.icon-new:hover {
-    background-image: url('/icons/paperplus32.png');
-}
-
-.toolbar-button .button-icon.icon-refresh:hover {
-    background-image: url('/icons/exchange32.png');
-}
-
-.toolbar-button .button-icon.icon-search:hover {
-    background-image: url('/icons/search32.png');
-}
-
-.toolbar-button .button-icon.icon-menu:hover {
-    background-image: url('/icons/gear32.png');
-}
-
-.toolbar-button .button-icon.icon-comment:hover {
-    background-image: url('/icons/comment32.png');
-}
-
-.toolbar-button .button-icon.icon-like:hover {
-    background-image: url('/icons/heart32.png');
-}
-
-.toolbar-button .button-icon.icon-pm:hover {
-    background-image: url('/icons/mail32.png');
-}
-
-.toolbar-button .button-icon.icon-delete:hover {
-    background-image: url('/icons/recycle32.png');
-}*/
-
-/*#post-button-comment:hover .button-icon.icon-comment {
-    background-image: url('/icons/comment32.png');
-}
-
-#post-button-like:hover .button-icon.icon-like {
-    background-image: url('/icons/heart32.png');
-}
-
-#post-button-pm:hover .button-icon.icon-pm {
-    background-image: url('/icons/mail32.png');
-}
-
-#button-new:hover .button-icon.icon-new {
-    background-image: url('/icons/paperplus32.png');
-}
-
-#button-refresh:hover .button-icon.icon-refresh {
-    background-image: url('/icons/exchange32.png');
-}
-
-#button-menu-main:hover .button-icon.icon-menu {
-    background-image: url('/icons/gear32.png');
-}
-
-#post-button-delete:hover .button-icon.icon-delete {
-    background-image: url('/icons/recycle32.png');
-}*/
-
 #button-menu-main {
     min-width: 0 !important;
 }
@@ -729,7 +669,7 @@ a:visited {
     color: #f6f6f6;
 }
 
-.post-block.unique.post-block-text.hover {
+.post-block.unique.post-block-text.hover, .selection-item.hover {
     background-color: #4d81bf !important;
     color: #f6f6f6;
 }
@@ -1029,6 +969,7 @@ a.link-title {
 
 .ui-widget {
     background: white;
+    border-radius: 5px;
 }
 
 .menu {
@@ -1079,7 +1020,8 @@ div.right-toolbar-button {
     width: 160px;
     position: absolute;
     top: 55px;
-    border-radius: 0;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     overflow: hidden;
     background: transparent;
 }
