--- a/css/main.css
+++ b/css/main.css
@@ -299,6 +299,7 @@ a:visited {
     background-position: center center;
     background-repeat: no-repeat;
     position: absolute;
+    border-radius: 5px;
     left: 0;
     right: 0;
     top: 0;
@@ -1079,6 +1080,7 @@ div.login-div {
     position: relative;
     width: 348px;
     padding: 0;
+    border-radius: 5px;
 }
 
 #post-comment-text > textarea {
