--- a/css/main.css
+++ b/css/main.css
@@ -1091,6 +1091,29 @@ div.login-div {
     margin-top: -2px;
 }
 
+.ui-widget.dialog-box {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1002;
+    heigth: 200px;
+    width: 500px;
+}
+
+#popup-error-message {
+    
+}
+
+#popup-info-message {
+    
+}
+
+#popup-confirm-message {
+    
+}
+
 /* Ellipses */
 
 p { 
