--- a/css/main.css
+++ b/css/main.css
@@ -1092,7 +1092,7 @@ div.login-div {
 }
 
 .ui-widget.dialog-box {
-    position: absolute;
+    position: fixed;
     left: 0;
     right: 0;
     top: 0;
