--- a/css/main.css
+++ b/css/main.css
@@ -232,7 +232,7 @@ a:visited {
 }
 
 .floating-panel {
-    width: 950px;
+/*    width: 950px;*/
     background-color: transparent;
     position: fixed;
     left: 0;
@@ -1093,13 +1093,11 @@ div.login-div {
 
 .ui-widget.dialog-box {
     position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: 1002;
-    height: 200px;
-    width: 500px;
+    left: 10%;
+    right: 10%;
+    top: 10%;
+    bottom: 10%;
+    z-index: 1001;
     margin: auto;
 }
 
