--- a/css/main.css
+++ b/css/main.css
@@ -1095,10 +1095,10 @@ div.login-div {
     border: 1px solid #ccc;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.28);
     position: absolute;
-    left: 10%;
-    right: 10%;
-    top: 10%;
-    bottom: 10%;
+    bottom: 100px;
+    top: 100px;
+    left: 25%;
+    right: 25%;
     z-index: 1001;
     margin: auto;
 }
