--- a/css/main.css
+++ b/css/main.css
@@ -1099,8 +1099,7 @@ div.login-div {
     top: 100px;
     left: 25%;
     right: 25%;
-    z-index: 1001;
-    margin: auto;
+    padding: 10px;
 }
 
 #popup-error-message {
