--- a/css/main.css
+++ b/css/main.css
@@ -1095,10 +1095,15 @@ div.login-div {
     border: 1px solid #ccc;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.28);
     position: absolute;
-    bottom: 100px;
-    top: 100px;
-    left: 25%;
-    right: 25%;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    height: 140px;
+    width: 350px;
+    overflow-x: none;
+    overflow-y: auto;
     padding: 10px;
 }
 
