--- a/css/main.css
+++ b/css/main.css
@@ -1109,11 +1109,25 @@ div.login-div {
     left: 0;
     right: 0;
     margin: auto;
-    height: 140px;
-    width: 350px;
+    height: 160px;
+    width: 400px;
     overflow-x: hidden;
     overflow-y: auto;
     padding: 10px;
+}
+
+.dialog-box .message {
+    position: relative;
+    height: 156px;
+    margin-bottom: 0;
+}
+
+.dialog-box .message .message-text {
+    top: 0;
+    bottom: 35px;
+    left: 40px;
+    right: 0;
+    position: absolute;
 }
 
 #popup-error-message {
