--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ html {
 body {
     overflow: hidden;
     background-color: #f1f1f1;
-/*    font-size: 0.98em;*/
+    /*    font-size: 0.98em;*/
 }
 
 /*
@@ -89,6 +89,9 @@ fieldset {
 textarea {
     resize: vertical;
     border: 1px solid #ccc;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 input[type=text] {
@@ -232,7 +235,7 @@ a:visited {
 }
 
 .floating-panel {
-/*    width: 950px;*/
+    /*    width: 950px;*/
     background-color: transparent;
     position: fixed;
     left: 0;
@@ -352,8 +355,8 @@ a:visited {
 }
 
 .selection-item-content > div {
-/*    margin-left: 10px !important;*/
-/*    text-align: center;*/
+    /*    margin-left: 10px !important;*/
+    /*    text-align: center;*/
 }
 
 .selection-item-content .button-icon {
@@ -370,8 +373,8 @@ a:visited {
     font-weight: bold;
     font-size: 1.05em;
     margin-bottom: 4px;
-/*    padding: 7px;
-    border: none !important;*/
+    /*    padding: 7px;
+        border: none !important;*/
 }
 
 #post-feed-noposts {
@@ -441,7 +444,7 @@ a:visited {
 .button, .menu-item {
     cursor: pointer;
     color: #444;
-/*    color: #f6f6f6;*/
+    /*    color: #f6f6f6;*/
     padding-left: 10px;
     padding-right: 10px;
     text-align: center;
@@ -575,8 +578,8 @@ a:visited {
     margin-bottom: -1px;
     cursor: pointer;
     position: relative;
-/*    color: #f6f6f6;*/
-/*    background-image: url('/img/tile-background.png');*/
+    /*    color: #f6f6f6;*/
+    /*    background-image: url('/img/tile-background.png');*/
 }
 
 .post-block .comment-count {
@@ -627,8 +630,8 @@ a:visited {
 }
 
 .facebook-user-header {
-/*    height: 65px;
-    line-height: 65px;*/
+    /*    height: 65px;
+        line-height: 65px;*/
     color: #f6f6f6;
     background-color: #4d81bf;
 }
@@ -780,8 +783,8 @@ a.link-title {
 
 .floating-panel-section {
     margin-bottom: 10px;
-/*    border: 2px solid #f6f6f6;*/
-/*    padding: 7px;*/
+    /*    border: 2px solid #f6f6f6;*/
+    /*    padding: 7px;*/
     position: relative;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -996,11 +999,11 @@ div.right-toolbar-button {
 }
 
 .toolbar-group.float-left {
-/*    margin-left: 10px;*/
+    /*    margin-left: 10px;*/
 }
 
 .toolbar-group.float-right {
-/*    margin-right: 10px;*/
+    /*    margin-right: 10px;*/
 }
 
 .menu {
@@ -1089,7 +1092,7 @@ div.login-div {
 #post-comment-text {
     height: 4.5em;
     position: relative;
-    width: 348px;
+    width: 100%;
     padding: 0;
     border-radius: 5px;
 }
