--- a/css/main.css
+++ b/css/main.css
@@ -225,7 +225,7 @@ a:visited {
     padding-top: 6px;
     padding-bottom: 6px;
     width: 138px;
-    margin-top: 10px;
+/*    margin-top: 10px;*/
     resize: none;
 }
 
@@ -1040,6 +1040,10 @@ div.right-toolbar-button {
     border-top-right-radius: 5px;
     overflow: hidden;
     background: transparent;
+}
+
+#left-rail > * {
+    margin-bottom: 10px;
 }
 
 .toolbar {
