--- a/css/main.css
+++ b/css/main.css
@@ -230,17 +230,7 @@ a:visited {
 }
 
 #like-button-wrapper {
-    position: relative;
-}
-
-#like-button-wrapper > iframe {
-/*    width: 200px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin-right: auto;
-    margin-left: auto;*/
-    text-align: center;
+    margin-left: 10px;
 }
 
 #main-panel {
