--- a/css/main.css
+++ b/css/main.css
@@ -1147,6 +1147,19 @@ div.login-div {
     padding: 10px;
 }
 
+.floating-panel-content.collapsed {
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 400px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding: 10px;
+}
+
 .modal {
     z-index: 2001;
 }
