--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ html {
 body {
     overflow: hidden;
 /*    background-color: #f1f1f1;*/
-    background-color: #e7ebf2;
+    background-color: #E4EAF2;
     /*    font-size: 0.98em;*/
 }
 
@@ -252,6 +252,7 @@ a:visited {
 
 #select-group-panel {
     width: 965px;
+    background-color: #E4EAF2;
 }
 
 .close-button {
