--- a/css/main.css
+++ b/css/main.css
@@ -353,7 +353,7 @@ a:visited {
 .selection-item {
     display: inline-block;
     background-color: #4d81bf;
-    color: #f6f6f6;
+    color: #f6f6f6 !important;
     margin: 5px;
     padding: 4px !important;
     position: relative;
