--- a/css/main.css
+++ b/css/main.css
@@ -598,6 +598,7 @@ a:visited {
     margin-bottom: -1px;
     cursor: pointer;
     position: relative;
+    border: 1px solid #f6f6f6;
 }
 
 .post-block .comment-count {
